# rust-examples

./: .gitignore
cep_from_json/: Cargo.toml
cep_from_json/src/: main.rs
extract_nested_json/: Cargo.toml  test.json
extract_nested_json/src/: main.rs
gaussian-integral-approximation/: Cargo.toml
gaussian-integral-aproximation/: Cargo.toml
gaussian-integral-aproximation/src/: main.rs
group/: Cargo.toml
group/group_sum_by/: Cargo.toml
group/group_sum_by/src/: lib.rs
group/src/: main.rs
group/tmp/: group.ts  tmp.rs
mutex/: Cargo.toml
mutex/ArcMutex/: Cargo.toml
mutex/ArcMutex/src/: lib.rs
mutex/src/: main.rs
option/src/: main.rs
os-dependent/: Cargo.toml
os-dependent/src/: main.rs
small-mongo/: Cargo.toml
small-mongo/src/: errors.rs  fruit.rs  main.rs
small-server/: Cargo.toml
small-server/migrations/: 20230521133028_initial-tables.sql
small-server/src/: Errors.rs  Fruit.rs  Pagination.rs  Person.rs  Salad.rs  SaladIngredient.rs  main.rs
