[package]
name = "small-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.18"
sqlx = { version="0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
serde = "1.0.163"
serde_json = "1.0.96"
dotenv = "0.15.0"
once_cell = "1.17.1"
